/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "DoublePassEventStreamElementPayloadProtos";

// Payload of a doublePassEvent stream element
message DoublePassEventStreamElementPayload {
    // empty by intention
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers[0] = Identifier of the player who kicked the first and received the second pass
// objectIdentifiers[1] = Identifier of the player who received the first and kicked the second pass
// groupIdentifiers[0] = Identifier of the team whose players performed the double pass
// positions[0] = Position where the ball has been kicked in the first pass
// positions[1] = Position where the ball has been received in the first pass
// positions[2] = Position where the ball has been kicked in the second pass
// positions[3] = Position where the ball has been received in the second pass